--- a/P4-catClicker/index.html
+++ b/P4-catClicker/index.html
@@ -14,7 +14,7 @@
       .container {
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        gap: 10px;
         justify-content: center;
         align-items: center;
         height: 100vh;
@@ -41,39 +41,67 @@
       span {
         font-size: 40px;
       }
+      .name-box {
+        display: flex;
+        width: 50%;
+        justify-content: space-around;
+        align-items: center;
+      }
     </style>
   </head>
+
   <body>
     <div class="container">
-      <img
-        src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-        alt="Cat Image"
-        class="image"
-        id="catImage"
-      />
+      <div class="name-box">
+        <h2>Momo</h2>
+        <h2>Suki</h2>
+      </div>
+      <div class="image-box">
+        <img
+          src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="Cat Image"
+          class="firstImage"
+          id="firstCatImage"
+        />
+        <img
+          src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="Cat Image"
+          class="secondImage"
+          id="secondCatImage"
+        />
+      </div>
       <h2 id="clickCount">You Click Image <span>0</span> Times</h2>
       <button class="resetButton" id="resetButton">Reset</button>
     </div>
+
     <script>
-      const catImage = document.getElementById("catImage");
-      const clickCount = document.getElementById("clickCount");
-      const resetButton = document.getElementById("resetButton");
+      const firstImage = document.querySelector(".firstImage");
+      const secondImage = document.querySelector(".secondImage");
+      const clickCount = document.querySelector("#clickCount");
+      const resetButton = document.querySelector("#resetButton");
 
       let count = 0;
-      let shouldIncrement = true;
+      let isIncrement = true;
 
-      catImage.addEventListener("click", () => {
-        if (shouldIncrement) {
+      firstImage.addEventListener("click", () => {
+        if (isIncrement) {
           count++;
           clickCount.innerHTML = `You Click Image <span>${count}</span> Times`;
         }
-        shouldIncrement = true;
+        isIncrement = true;
+      });
+      secondImage.addEventListener("click", () => {
+        if (isIncrement) {
+          count++;
+          clickCount.innerHTML = `You Click Image <span>${count}</span> Times`;
+        }
+        isIncrement = true;
       });
 
       resetButton.addEventListener("click", () => {
         count = 0;
         clickCount.innerHTML = `You Click Image <span>${count}</span> Times`;
-        shouldIncrement = false;
+        isIncrement = false;
       });
     </script>
   </body>
