--- a/P5-catClicker-Premium/index.html
+++ b/P5-catClicker-Premium/index.html
@@ -21,13 +21,13 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        gap: 30px;
+        gap: 40px;
       }
       .top-container {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 10px;
+        gap: 20px;
         flex-wrap: wrap;
       }
       .cat-container {
@@ -58,20 +58,24 @@
         border: 2px dashed white;
         border-radius: 10px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
       }
       .box img {
-        max-width: 100%;
-        max-height: 100%;
+        width: 100%;
+        height: 250px;
         border-radius: 10px;
       }
       .bottom-container {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 5px;
+        gap: 10px;
+      }
+      h3 {
+        margin: 10px 0;
       }
     </style>
   </head>
@@ -131,7 +135,8 @@
       </div>
       <div class="bottom-container">
         <div class="box">
-          <h3 class="showImage">Select an image to view</h3>
+          <h3 class="showImageText">Select an image to view</h3>
+          <img class="showImage" src="" alt="" style="display: none" />
         </div>
       </div>
     </div>
@@ -144,6 +149,7 @@
         document.querySelector("#fourthCount"),
         document.querySelector("#fifthCount"),
       ];
+      const showImageText = document.querySelector(".showImageText");
       const showImage = document.querySelector(".showImage");
 
       images.forEach((img, index) => {
@@ -151,7 +157,10 @@
         img.addEventListener("click", () => {
           count++;
           counts[index].textContent = `Count: ${count}`;
-          showImage.innerHTML = `<img src="${img.src}" alt="${img.alt}" />`;
+          showImage.src = img.src;
+          showImage.alt = img.alt;
+          showImageText.textContent = img.alt;
+          showImage.style.display = "block";
         });
       });
     </script>
