--- a/P3-imgCarousel/index.html
+++ b/P3-imgCarousel/index.html
@@ -5,99 +5,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      body {
-        font-family: Arial, sans-serif;
-      }
-
-      .carousel {
-        position: relative;
-        max-width: 600px;
-        margin: auto;
-        overflow: hidden;
-        border: 2px solid #ddd;
-        border-radius: 10px;
-      }
-
-      .carousel-inner {
-        display: flex;
-        transition: transform 0.5s ease;
-      }
-
-      .carousel-item {
-        min-width: 100%;
+      * {
+        margin: 0;
+        padding: 0;
         box-sizing: border-box;
       }
-
-      .carousel img {
+      main {
+        width: 60%;
+        height: 500px;
+        margin-top: 100px;
+        margin: auto;
+        box-shadow: 0px 0px 3px grey;
+        position: relative;
+        overflow: hidden;
+      }
+      .slide {
         width: 100%;
-        display: block;
-      }
-
-      .prev,
-      .next {
+        height: 100%;
         position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        border: none;
-        padding: 10px;
+        transition: transform 0.5s ease-in-out;
+      }
+      .nav {
+        text-align: center;
+        margin-top: 15px;
+      }
+      .nav button {
+        font-size: 20px;
+        padding: 3px;
         cursor: pointer;
-        border-radius: 50%;
-      }
-
-      .prev {
-        left: 10px;
-      }
-
-      .next {
-        right: 10px;
       }
     </style>
   </head>
   <body>
-    <div class="carousel">
-      <button class="prev" onclick="prevSlide()">&#10094;</button>
-      <div class="carousel-inner">
-        <img
-          src="https://images.unsplash.com/photo-1719489099010-1158ad4ef585?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          class="carousel-item active"
-        />
-        <img
-          src="https://images.unsplash.com/photo-1719702702556-43c793e2b625?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          class="carousel-item"
-        />
-        <img
-          src="https://plus.unsplash.com/premium_photo-1691960547773-2393c0559208?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          class="carousel-item"
-        />
-      </div>
-      <button class="next" onclick="nextSlide()">&#10095;</button>
+    <main>
+      <img
+        src="https://picsum.photos/id/201/1000/500
+      "
+        alt=""
+        class="slide"
+      />
+      <img
+        src="https://picsum.photos/id/202/1000/500
+      "
+        alt=""
+        class="slide"
+      />
+      <img
+        src="https://picsum.photos/id/203/1000/500
+      "
+        alt=""
+        class="slide"
+      />
+      <img
+        src="https://picsum.photos/id/234/1000/500
+      "
+        alt=""
+        class="slide"
+      />
+    </main>
+    <div class="nav">
+      <button onclick="goPrev()">Prev</button>
+      <button onclick="goNext()">Next</button>
     </div>
     <script>
-      let currentSlide = 0;
+      const slides = document.querySelectorAll(".slide");
 
-      function showSlide(index) {
-        const slides = document.querySelectorAll(".carousel-item");
-        if (index >= slides.length) {
-          currentSlide = 0;
-        } else if (index < 0) {
-          currentSlide = slides.length - 1;
+      var counter = 0;
+      // console.log(slides);
+      slides.forEach((slide, index) => {
+        slide.style.left = `${index * 100}%`;
+      });
+
+      const goPrev = () => {
+        // counter = counter === 0 ? slides.length - 1 : counter - 1;
+        // slideImage();
+        if (counter === 0) {
+          counter = slides.length - 1;
         } else {
-          currentSlide = index;
+          counter--;
         }
+        slideImage();
+      };
 
-        const carouselInner = document.querySelector(".carousel-inner");
-        carouselInner.style.transform = `translateX(-${currentSlide * 100}%)`;
-      }
-
-      function nextSlide() {
-        showSlide(currentSlide + 1);
-      }
-
-      function prevSlide() {
-        showSlide(currentSlide - 1);
-      }
+      const goNext = () => {
+        if (counter === slides.length - 1) {
+          counter = 0;
+        } else {
+          counter++;
+        }
+        slideImage();
+      };
+      const slideImage = () => {
+        slides.forEach((slide) => {
+          slide.style.transform = `translateX(-${counter * 100}%)`;
+        });
+      };
     </script>
   </body>
 </html>
